Add recipe contents and image for pasta bake

--- a/recipes/pasta-bake.html
+++ b/recipes/pasta-bake.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Pasta Bake Recipe</h1>
+      <img src="images/pasta-bake.jpg">
+      <h2>Description</h2>
+      <p>This recipe will teach you how to make a tasty chicken pasta bake!</p>
+      <h2>Ingredients:</h2>
+      <ul>
+        <li>Rigatoni Pasta</li>
+        <li>Chicken Breast</li>
+        <li>Pasta Sauce</li>
+        <li>Mushrooms</li>
+        <li>One red onion</li>
+        <li>Cheese</li>
+      </ul>
+      <h2>Steps:</h2>
+      <ol>
+        <li>Cook the onion, mushrooms and chicken in a pot</li>
+        <li>Boil the pasta</li>
+        <li>Once veg and chicken are cooked, add sauce</li>
+        <li>Combine with cooked pasta</li>
+        <li>Once mixed, place in an oven tray and top with cheese</li>
+        <li>bake in oven for 10 mins at 200C or until crispy</li>
+      </ol>
 </body>
 </html>
